--- a/EventHubSender/ConsoleEventHubSender/ConsoleEventHubSender.csproj
+++ b/EventHubSender/ConsoleEventHubSender/ConsoleEventHubSender.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.0.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" />
   </ItemGroup>
 
 </Project>
